# dkmeta

./: .#.gitignore  .gitignore  .merlin  META  Makefile  README.md  _oasis  _tags  dkmeta.install  dkmeta.opam  opam
encodings/: lf.dk
src/: .merlin  config.ml  dkmeta.ml  dkmeta.mli  dkmeta.mllib  dune  encoding.ml  main.ml  meta.ml  quoting.ml  quoting.mli  stats.ml  version.ml.ab
tests/: Makefile
tests/product/: file.dk  l.dk  lf.dk  meta.dk
